--- a/.github/workflows/scrape_data.yml
+++ b/.github/workflows/scrape_data.yml
@@ -1,47 +1,46 @@
 name: Scrape Robot Data
 
-# 触发条件
 on:
-  # 1. 允许在Actions页面手动运行此工作流，方便测试
   workflow_dispatch:
-  # 2. 定时触发：每天UTC时间0点运行一次（北京时间早上8点）
   schedule:
     - cron: '0 0 * * *'
 
 jobs:
   scrape:
-    # 运行环境：使用最新的Ubuntu系统
     runs-on: ubuntu-latest
 
+    # =======================================================
+    # VVVV  这就是我们添加的修复代码 VVVV
+    permissions:
+      contents: write
+    # ^^^^  授予工作流写入仓库内容的权限 ^^^^
+    # =======================================================
+
     steps:
-      # 第一步：检出代码
-      # 把你的仓库代码下载到运行器中
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 第二步：设置Python环境
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # 第三步：安装Python依赖库
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # 第四步：运行我们的爬虫脚本
       - name: Run scraper
         run: python scripts/scraper.py
 
-      # 第五步：自动提交更改
-      # 如果爬虫更新了 data/robots.json 文件，这一步会自动将更改提交回你的仓库
       - name: Commit and push if data changed
         run: |
           git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
+          git config --global user.email 'actions-bot@github.com'
           git add data/robots.json
-          # 如果文件有变动，才执行提交
-          git diff --staged --quiet || git commit -m "feat: Update robot data"
-          git push
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "feat: Auto-update robot data"
+            git push
+          fi
